--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,61 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Montserrat", sans-serif;
+}
+
+* {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    /* font-weight: 600; */
+    font-style: normal;
+}
+
+.montserrat {
+    font-family: "Montserrat", sans-serif;
+}
+
+.montserrat-italic {
+    font-family: "Montserrat", sans-serif;
+    font-style: italic;
+}
+
+.montserrat-thin {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 100;
+}
+
+.montserrat-light {
+    font-family: "Montserrat", sans-serif !important;
+    font-weight: 300 !important;
+}
+
+.montserrat-regular {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
+}
+
+.montserrat-medium {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+}
+
+.montserrat-semibold {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+}
+
+.montserrat-bold {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+}
+
+.montserrat-extrabold {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 800;
+}
+
+.montserrat-black {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 900;
 }
