--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 body {
-  font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 * {
@@ -9,6 +9,12 @@ body {
     font-optical-sizing: auto;
     /* font-weight: 600; */
     font-style: normal;
+}
+
+input,
+textarea,
+select {
+    font-size: 16px;
 }
 
 .montserrat {
